# vibe

./: ARCHITECTURE.md  GLOSSARY.md  LICENSE  README.md  SPEC.md  components.json  index.html  package.json  skills-lock.json  vite.config.ts
.github/workflows/: release.yaml
plans/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  README.md
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bootstrap.rs  crypto.rs  identity.rs  lib.rs  network.rs  noise_handshake.rs  noise_session.rs  outbox.rs  store.rs
src/components/call/: call-controls.tsx  call-overlay.tsx  call-shell.tsx  incoming-call-dialog.tsx
src/components/chat/: chat-empty.tsx  chat-layout.tsx  chat-list.tsx  (+5 more)
src/contexts/: call-context.tsx  conversations-context.tsx
src/hooks/: use-auto-connect.ts  use-call-engine.ts  use-call.ts  use-connect-deep-link.ts  use-contact-reachability.ts  use-conversations.ts  use-media-query.ts  use-network-bootstrap.ts  use-overlay-peers.ts  use-peer-invite-deep-link.ts  use-text-channel.ts  use-text-chat.ts  use-tick.ts  use-video-chat.ts  use-voice-chat.ts
src/lib/: call-history.ts  call-ringtone.ts  calls.ts  clipboard.ts  connect-answer-prompt.ts  connect-errors.ts  connect-handler.ts  connect-uri.ts  ice-config.ts  peer-id.ts  query-client.ts  query-keys.ts  sdp-exchange.ts  tauri.ts  webrtc.ts
src/providers/: app-providers.tsx
src/routes/: __root.tsx  _tabs.tsx  index.tsx
src/types/: call.ts  chat.ts  contact.ts
(+30 files in other folders)
