[package]
name = "vibe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "vibe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
futures = "0.3"
libp2p = { version = "0.54", features = [
  "tokio",
  "gossipsub",
  "noise",
  "tcp",
  "yamux",
  "macros",
  "identify",
] }
tauri-plugin-deep-link = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = { version = "0.22", features = ["alloc"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
snow = "0.9"
hex = "0.4"
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2.3.2"
